refactor: update Course entity and repository to use String for course ID